update jumboton section to fix overflow issue on mobile

--- a/projects/style/style.scss
+++ b/projects/style/style.scss
@@ -53,16 +53,11 @@ $boxed-view-bg: white;
 
 }
 
-.fader {
-
-  content: '';
-  background: linear-gradient(to bottom,rgba(255,255,255,.2),rgba(255,255,255,1));
-  position: relative;
-
-
-}
 
 .fader {
+  flex: 2;
+  min-width: 50%;
+  max-height: 45vh;
   position: relative;
   overflow: hidden;
   &:before {
@@ -92,11 +87,11 @@ $boxed-view-bg: white;
 .modal--content {
   align-items: center;
   display: flex;
-  flex: 2;
+
   flex-direction: column;
   font-size: 80%;
-  max-height: 40vh;
-  min-width: 50%;
+
+  max-height: 100%;
   margin: 10px;
   overflow-y: auto;
   padding: 20px;
@@ -114,12 +109,15 @@ $boxed-view-bg: white;
   .boxed-view__box {
     padding: .5rem;
   }
+  .fader {
+    max-height: 30vh;
+  }
+
   .modal--content {
     align-items: center;
     font-size: 80%;
     margin: 5px;
-    max-height: 35vh;
-    overflow-y: scroll;
+
     padding: 20px 8px;
     text-align: center;
     p {
